@@ -3,6 +3,10 @@ The "r99999" numbers are Subversion revision numbers.
 
 Changes for current svn
 =======================
+ o 18290 2017-12-22 marcel
+   Added killSessionNoThrow and killClientNoThrow for JMX
+   NPE Fix in ContextNote.java
+ 
  o 18287 2017-11-08 michele
    Removed sychronized in SocketUrl which led to a deadlock when multiple threads where creating a SSL Socket
 
